<resources>
    <string name="app_name">StarEG</string>

    <string name="date_label">Date</string>
    <string name="line_label">Line</string>
    <string name="timetables_unzip_status">Extracting data...</string>
    <string name="db_filling_status">Loading data in application...</string>
    <string name="internet_problem">No internet...</string>
    <string name="new_timetables_notification_desc">New data are available! Click to download it.</string>
    <string name="provider_read_permission"> database reading </string>
    <string name="provider_write_permission">Permissions for database writing </string>
    <string name="jsonfile_not_found"> Json file not found on Star API </string>
    <string name="check_for_new_json_file"> Check for new json file </string>
    <string name="download_info"> Downloading json file</string>
    <string name="download_state"> Downloading state ...... </string>
    <string name="download_stateok"> Downloading state ......100% </string>
    <string name="unzip_info"> Unziping downloaded data ...</string>
    <string name="unzip_state"> Unziping state ......100% </string>
    <string name="data_imported"> All data are imported </string>
    <string name="update_ok"> Everything is updated, no new json file to download !!</string>

    <string name="app_shutdown"> This application will shutdown after new data loading. </string>

</resources>